// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when reported no income or assets 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "primary_applicant",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with no financial sources data 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "primary_applicant",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with only asset sources - with warning 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "primary_applicant",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with some financial sources data - with warnings 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "primary_applicant",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with some financial sources data 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "primary_applicant",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with some financial sources data if guarantor - with warnings 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "guarantor",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;

exports[`matches snapshot with some financial sources data if guarantor 1`] = `
<IncomeVerificationSummaryPage
  applicant={
    Object {
      "role": "guarantor",
    }
  }
  config={
    Object {
      "applicant_income_requirements": 40,
      "guarantor_income_requirement_multiplier": 80,
    }
  }
  goBack={[MockFunction]}
  history={
    Object {
      "push": [MockFunction],
    }
  }
  profile={
    Object {
      "unit": Object {
        "price": 1000,
      },
    }
  }
/>
`;
